Config/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    app: nginx
spec:
  rules:
  - host: "host.com"
    http:
      paths:
      - pathType: Prefix
        path: "/docs"
        backend:
          service:
            name: nginx-service
            port:
              number: 80
